Update all deprecations to new API and fix a Java newInstance deprecation